fix: extra spacing between lists for large recipe max-width: 1200px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,7 +583,7 @@ textarea {
     /* recipes with multiple ingredients lists */
     #ingredients-large-grid {
         grid-template-columns: 3fr 1fr 5fr 1fr;
-        grid-template-rows: 64px 1fr 1fr 1fr;
+        grid-template-rows: 64px auto auto auto;
     }
 
     .ingredients-divided {
